public class Manufacturer {
  public void receiveShipment() {
  }

  public void storeRawFood() {
  }
}
