public class RawFoodMaker implements Role {
  public void createRawFood() {
  }

  public void checkShipment() {
  }

  public void spendShipment() {
  }

  public void testMethod() {
  }

@Override
public void performRole(){
         //实现方法
}
}
