public interface Role{
 void performRole();
}
