public class ShouwMaker implements Role {
  public void aaa() {
  }

  public void bbb() {
  }

@Override
public void performRole(){
         //实现方法
}
}
